discovermusic widget created(appbar and bottomnav added)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   just_audio: ^0.9.32
   get: ^4.6.5
+  google_fonts: ^4.0.3
 
 dev_dependencies:
   flutter_test:
